--- a/src/pages/MainPage.scss
+++ b/src/pages/MainPage.scss
@@ -4,10 +4,12 @@
   .mainContainer {
     flex: 6;
 
-    .widgets {
+    .widgets, 
+    charts {
       display: flex;
       padding: 20px;
       gap: 20px;
+      overflow-y: hidden;
     }
   }
 }
