--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -4,14 +4,21 @@
   box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
   padding: 10px;
   color: grey;
- /*  width: 730px;
-  height: 300px; */
 
   .title {
-      margin-bottom: 20px;
+    padding: 20px 20px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    font-size: 16px;
   }
 
   .chartGrid {
-      stroke: lightgray;
+    stroke: lightgray;
+  }
+
+  .chartContainer {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
   }
 }
