--- a/src/pages/MainPage.scss
+++ b/src/pages/MainPage.scss
@@ -4,8 +4,8 @@
   .mainContainer {
     flex: 6;
 
-    .widgets, 
-    charts {
+    .widgets,
+    .charts {
       display: flex;
       padding: 20px;
       gap: 20px;
