--- a/src/components/style/dark.scss
+++ b/src/components/style/dark.scss
@@ -38,4 +38,13 @@
             }
         }
     }
+
+    .item search {
+        color: aliceblue;
+    }
+
+    .dataItem:hover {
+        cursor: pointer;
+        background-color: rgb(126, 125, 125);
+    }
 }
