--- a/src/components/comparePlaces/comparePlaces.scss
+++ b/src/components/comparePlaces/comparePlaces.scss
@@ -1,12 +1,56 @@
-input {
-    border: none;
-    outline: none;
-    background-color: transparent;
-}
-
-.search {
+.navbarPlaces {
+    height: 50px;
     display: flex;
     align-items: center;
-    border: 0.5px solid lightgray;
-    padding: 3px;
+    font-size: 14px;
+    color: #555;
+
+    .findWrapper {
+        width: 100%;
+        padding: 20px;
+        margin: 20px;
+        display: flex;
+        align-items: center;
+        border: 0.5px solid rgb(231, 228, 228);
+        justify-content: space-between;
+
+        .mainCity {
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .search {
+            display: flex;
+            align-items: center;
+            border: 0.5px solid lightgray;
+            padding: 3px;
+
+            input {
+                border: none;
+                outline: none;
+                background-color: transparent;
+            }
+
+            &::placeholder {
+                font-size: 12px;
+            }
+        }
+
+        .items {
+            display: flex;
+            align-items: center;
+
+            .item {
+                display: flex;
+                align-items: center;
+                margin-right: 20px;
+                position: relative;
+
+                .icon {
+                    font-size: 20px;
+                    padding-right: 5px;
+                }
+            }
+        }
+    }
 }
