--- a/src/components/tableData/tableData.scss
+++ b/src/components/tableData/tableData.scss
@@ -7,26 +7,47 @@
         border-spacing: 0;
         width: 100%;
         border: 1px solid #ddd;
+        thead,
+        tbody {
+            th,
+            td {
+                text-align: center;
+                padding: 16px;
+            }
+            th:first-child,
+            td:first-child {
+                text-align: left;
+            }
 
-        th,
-        td {
-            text-align: center;
-            padding: 16px;
+            tr:nth-child(even) {
+                background-color: #f2f2f2;
+            }
+            .fa {
+                color: green;
+            }
+
+            .fa-remove {
+                color: red;
+            }
         }
-        th:first-child,
-        td:first-child {
-            text-align: left;
+    }
+
+    .menu {
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+        color: #555;
+        padding-bottom: 10px;
+
+        .menuItem {
+            padding-left: 10px;
+            border-bottom: 0.5px solid rgb(231, 228, 228);
         }
 
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        .fa-check {
-            color: green;
-        }
-
-        .fa-remove {
-            color: red;
+        .menuItem:hover {
+            cursor: pointer;
+            color: #000;
+            border-bottom: 0.5px solid rgb(0, 0, 0);
         }
     }
 }
