--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -20,5 +20,12 @@
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+
+    .chartContainerCenter {
+      width: 800px;
+      height: 350px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 }
