--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -5,13 +5,6 @@
   padding: 10px;
   color: grey;
 
-  .title {
-    padding: 20px 20px;
-    margin-bottom: 20px;
-    font-weight: bold;
-    font-size: 16px;
-  }
-
   .chartGrid {
     stroke: lightgray;
   }
@@ -26,6 +19,19 @@
       height: 350px;
       margin-left: auto;
       margin-right: auto;
+    }
+  }
+
+  .topNav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .title {
+      padding: 20px 20px;
+      margin-bottom: 20px;
+      font-weight: bold;
+      font-size: 16px;
     }
   }
 }
