--- a/src/components/tableData/tableData.scss
+++ b/src/components/tableData/tableData.scss
@@ -42,6 +42,13 @@
         .menuItem {
             padding-left: 10px;
             border-bottom: 0.5px solid rgb(231, 228, 228);
+            display: flex;
+
+            .menuDate {
+                padding-left: 5px;
+                padding-top: 3px;
+                font-size: 16px;
+            }
         }
 
         .menuItem:hover {
