--- a/src/components/style/dark.scss
+++ b/src/components/style/dark.scss
@@ -70,11 +70,11 @@
                 background-color: rgb(126, 125, 125);
             }
             .fa {
-                color: green;
+                color: rgb(209, 254, 209);
             }
 
             .fa-remove {
-                color: red;
+                color: rgb(254, 194, 194);
             }
         }
     }
